# toolcli

./: .gitignore  LICENSE  README.md  ipdb.pyi  pyproject.toml  setup.py
docs/: command_data_format.md  command_execution_sequence.md  file_hierarchy.md
tests/: test_code.py
toolcli/: __init__.py  __main__.py  capture_utils.py  exceptions.py  execute.py  external_utils.py  file_edit_utils.py  file_validate_utils.py  input_utils.py  parse.py  spec.py  style_utils.py  terminal_utils.py
toolcli/command_utils/: __init__.py  execute.py  execution.py  output_utils.py  parse.py  plugin_utils.py
toolcli/command_utils/default_subcommands/: cd_command.py  help_command.py  version_command.py
toolcli/command_utils/default_subcommands/cli/: config_command.py  index_command.py  spec_command.py
toolcli/command_utils/dev_utils/: __init__.py  cli_typing.py
toolcli/command_utils/dev_utils/dev_subcommands/: annotate_command.py
toolcli/command_utils/help_utils/: __init__.py  root_command_help.py  subcommand_help.py
toolcli/command_utils/parsing/: __init__.py  arg_parsing.py  command_parsing.py  index_parsing.py
toolcli/command_utils/standard_subcommands/: cd_command.py  help_command.py  record_help_command.py  version_command.py
toolcli/command_utils/standard_subcommands/cli/: annotate_command.py  config_command.py  edit_command.py  index_command.py  spec_command.py  theme_command.py
toolcli/toolbox/: __init__.py  file_validate_utils.py  input_utils.py  terminal_utils.py
