
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "toolcli"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
dependencies = [
    "rich>=12.1.0",
    "typing_extensions>=0.4.0",
]

[project.optional-dependencies]
full = [
    "ipdb>=0.13.1"
]

[tool.mypy]
strict = true
files = ["toolcli"]
